compiler/testData/diagnostics/tests/nullabilityAndSmartCasts/noUnnecessaryNotNullAssertionOnErrorType.fir.kt
package a

fun foo() {
    <!ARGUMENT_TYPE_MISMATCH!>bar()<!>!!
}

fun bar() = <!UNRESOLVED_REFERENCE!>aa<!>
